--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 </tr>
             </table>
             <p>
-                Модов на Minecraft Очень много! Примерно 250 000. Их источники - CurseForge, Modrinth, Minecraft Inside и куча других.
+                Модов на Minecraft Очень много! Примерно 250 000. Их источники - CurseForge, Modrinth, Minecraft Inside и куча других.</p>
                 <img src="https://avatars.mds.yandex.net/i?id=e1bd333629cd3630fb81cadcbc759859_l-5882731-images-thumbs&n=13" width="80px" height="80px">
                 <img src="https://camo.githubusercontent.com/58bec1e8e9f570e4f89fe3127e71a890adf70b40a63b8e911f5106005a70b634/68747470733a2f2f692e696d6775722e636f6d2f6f3130345532372e706e67" width="80px" height="80px">
                 <img src="https://minecraft-inside.ru/images/logo_w150.png" width="250px" height="80px">
-                Моды для Minecraft — это дополнения к игре, которые расширяют её возможности. С их помощью можно изменить игровой интерфейс, добавить транспорт, улучшить оружие и многое другое. 
+                <p>Моды для Minecraft — это дополнения к игре, которые расширяют её возможности. С их помощью можно изменить игровой интерфейс, добавить транспорт, улучшить оружие и многое другое. 
                 Некоторые моды для Minecraft:
                 This Tsunami. Позволяет поменять эффекты погоды и добавить новые катаклизмы, например, искусственно вызывать цунами из воды или лавы, динамита и других блоков.
                 Unearthed Journey. Добавляет три новых измерения, воссозданных по типу эпохи кайнозоя. В них доступно более 30 уникальных существ.
